[package]
name = "StreamSign"
version = "0.1.0"
authors = ["Michael Swan <mswan@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0-alpha.2"
actix-web = "3.0.0-alpha.1"
actix-rt = "1.0.0"
futures = "0.3.4"
ring = "0.17.0-alpha.1"
hex = "0.4.2"
serde = "1.0.106"
serde_json = "1.0.51"